--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -4,9 +4,21 @@
     <meta charset="utf-8" />
     <title>@ViewData["Title"] - Shop</title>
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="icon" href="img/Fevicon.png" type="image/png" />
+    <link rel="stylesheet" href="~/vendors/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/vendors/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="~/vendors/themify-icons/themify-icons.css" />
+    <link rel="stylesheet" href="~/vendors/nice-select/nice-select.css" />
+    <link
+      rel="stylesheet"
+      href="~/vendors/owl-carousel/owl.theme.default.min.css"
+    />
+    <link rel="stylesheet" href="~/vendors/owl-carousel/owl.carousel.min.css" />
+
+    <link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
-    <header>
+    @* <header>
         <nav>
             <ul style="list-style: none; display: flex; gap: 15px;">
                 <li><a asp-controller="AddItem" asp-action="NewItem">Add New Item</a></li>
@@ -15,7 +27,7 @@
                 <li><a asp-controller="ContactUs" asp-action="ContactUs">Contact Us</a></li>
             </ul>
         </nav>
-    </header>
+    </header> *@
         <header class="header_area">
       <div class="main_menu">
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -56,8 +68,9 @@
                   >
                   <ul class="dropdown-menu">
                     <li class="nav-item">
-                      <a class="nav-link" href="category.html">Shop Category</a>
+                      <a class="nav-link" asp-controller ="Category" asp-action="Category" >Shop Category</a>
                     </li>
+                 
                     <!-- <li class="nav-item">
                       <a class="nav-link" href="single-product.html"
                         >Product Details</a
@@ -124,12 +137,13 @@
                   </ul>
                 </li> -->
                  <li class="nav-item">
-                  <a asp-controller="AddItem" asp-action="NewItem" class="nav-link" href="add-product.html">Add New Item</a>
+                  <a asp-controller="AddItem" asp-action="NewItem" class="nav-link">Add New Item</a>
                 </li>
                  
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" asp-controller="ContactUs" asp-action="ContactUs" >Contact</a>
                 </li>
+                
               </ul>
 
               <ul class="nav-shop">
