--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -3,22 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewData["Title"] - Shop</title>
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="icon" href="img/Fevicon.png" type="image/png" />
-    <link rel="stylesheet" href="~/vendors/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/vendors/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="~/vendors/themify-icons/themify-icons.css" />
-    <link rel="stylesheet" href="~/vendors/nice-select/nice-select.css" />
-    <link
-      rel="stylesheet"
-      href="~/vendors/owl-carousel/owl.theme.default.min.css"
-    />
-    <link rel="stylesheet" href="~/vendors/owl-carousel/owl.carousel.min.css" />
+   
 
     <link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
-    @* <header>
+    <header>
         <nav>
             <ul style="list-style: none; display: flex; gap: 15px;">
                 <li><a asp-controller="AddItem" asp-action="NewItem">Add New Item</a></li>
@@ -27,151 +17,8 @@
                 <li><a asp-controller="ContactUs" asp-action="ContactUs">Contact Us</a></li>
             </ul>
         </nav>
-    </header> *@
-        <header class="header_area">
-      <div class="main_menu">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container">
-            <a class="navbar-brand logo_h" href="index.html"
-              ><img src="img/logo.png" alt=""
-            /></a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <div
-              class="collapse navbar-collapse offset"
-              id="navbarSupportedContent"
-            >
-              <ul class="nav navbar-nav menu_nav ml-auto mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item submenu dropdown">
-                  <a
-                    href="#"
-                    class="nav-link dropdown-toggle"
-                    data-toggle="dropdown"
-                    role="button"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                    >Shop</a
-                  >
-                  <ul class="dropdown-menu">
-                    <li class="nav-item">
-                      <a class="nav-link" asp-controller ="Category" asp-action="Category" >Shop Category</a>
-                    </li>
-                 
-                    <!-- <li class="nav-item">
-                      <a class="nav-link" href="single-product.html"
-                        >Product Details</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="checkout.html"
-                        >Product Checkout</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="confirmation.html"
-                        >Confirmation</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="cart.html">Shopping Cart</a>
-                    </li> -->
-                  </ul>
-                </li>
-                <!-- <li class="nav-item submenu dropdown">
-                  <a
-                    href="#"
-                    class="nav-link dropdown-toggle"
-                    data-toggle="dropdown"
-                    role="button"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                    >Blog</a
-                  >
-                  <ul class="dropdown-menu">
-                    <li class="nav-item">
-                      <a class="nav-link" href="blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="single-blog.html"
-                        >Blog Details</a
-                      >
-                    </li>
-                  </ul>
-                </li>
-                <li class="nav-item submenu dropdown">
-                  <a
-                    href="#"
-                    class="nav-link dropdown-toggle"
-                    data-toggle="dropdown"
-                    role="button"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                    >Pages</a
-                  >
-                  <ul class="dropdown-menu">
-                    <li class="nav-item">
-                      <a class="nav-link" href="login.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="register.html">Register</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="tracking-order.html"
-                        >Tracking</a
-                      >
-                    </li>
-                  </ul>
-                </li> -->
-                 <li class="nav-item">
-                  <a asp-controller="AddItem" asp-action="NewItem" class="nav-link">Add New Item</a>
-                </li>
-                 
-                <li class="nav-item">
-                  <a class="nav-link" asp-controller="ContactUs" asp-action="ContactUs" >Contact</a>
-                </li>
-                
-              </ul>
-
-              <ul class="nav-shop">
-                <li class="nav-item">
-                  <button id="searchBtn"><i class="ti-search"></i></button>
-                </li>
-                <li class="nav-item" id="searchBox" style="display: none">
-                  <input
-                    type="text"
-                    id="searchInput"
-                    placeholder="searching ..."
-                  />
-                </li>
-                <li class="nav-item">
-                  <button>
-                    <i class="ti-shopping-cart"></i
-                    ><span class="nav-shop__circle">3</span>
-                  </button>
-                </li>
-                <li class="nav-item">
-                  <a class="button button-header" href="#">Buy Now</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
     </header>
+       
 
     <main>
         @RenderBody()
